# coursework2

./: main.py  pyproject.toml
src/: user.py  vacancy_json.py  work.py
